tests/fixtures/invalid/none_gt_dict.py
# Cannot compare with > None and Dict[str, int]
x: bool = None > {"a": 1}
